# smart-meeting-room-openenv

./: Dockerfile  README.md  __init__.py  grader_hard.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
__pycache__/: __init__.cpython-311.pyc.2205944250160  inference.cpython-311.pyc.2205944250160  inference.cpython-311.pyc.2731040921520  server.cpython-311.pyc.2205944250160
env/: __init__.py  data.py  environment.py  models.py
env/__pycache__/: __init__.cpython-311.pyc.2205944250160  environment.cpython-311.pyc.1530115471152  environment.cpython-311.pyc.2100408346544  environment.cpython-311.pyc.2125604235056  environment.cpython-311.pyc.2205944250160  environment.cpython-311.pyc.2772995430704
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
graders/__pycache__/: grader_easy.cpython-311.pyc.2772995430832  grader_hard.cpython-311.pyc.2772995683376  grader_medium.cpython-311.pyc.2772995676720
server/: app.py
server/__pycache__/: app.cpython-311.pyc.2022063036848  app.cpython-311.pyc.2205944250160
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tasks/__pycache__/: __init__.cpython-311.pyc.2205944250160  task_easy.cpython-311.pyc.2205944250160  task_easy.cpython-311.pyc.2694541564336  task_hard.cpython-311.pyc.2205944250160  task_hard.cpython-311.pyc.2694541800624  task_medium.cpython-311.pyc.2205944250160  task_medium.cpython-311.pyc.2694541799728
